Fix broken CSS

--- a/ObsidianDiscordThemeOnline.css
+++ b/ObsidianDiscordThemeOnline.css
@@ -16,10 +16,10 @@
 /* @import url(https://mattymroz.github.io/ObsidianDiscord/ObsidianDiscordThemeOnline.css); */
 
 /*
- *
- *  BASIC SETTINGS
- *
- */
+  *
+  *  BASIC SETTINGS
+  *
+  */
 
 :root {
     --app-font: "gg sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -223,10 +223,10 @@
 }
 
 /*
- *
- *  PINGS & NOTIFICATIONS
- *
- */
+  *
+  *  PINGS & NOTIFICATIONS
+  *
+  */
 
 .numberBadge__50328 {
     padding: 5px 5px !important;
@@ -242,12 +242,37 @@
     box-shadow: 0px 0px 10px 2px var(--bar-box-shadow-color);
 }
 
+div.bar_c10249.unreadMentionsBar_fea3ef.mention_c10249.active_c10249 {
+    background-color: var(--bar-color);
+    box-shadow: 0px 0px 10px 2px var(--bar-box-shadow-color);
+}
+
+div.bar_c10249.unreadBar_c43953.mention_c10249.active_c10249 {
+    background-color: var(--bar-color);
+    box-shadow: 0px 0px 10px 2px var(--bar-box-shadow-color);
+}
+
+.numberBadge_df8943 {
+    background-color: var(--bar-color);
+    box-shadow: 0px 0px 10px 2px var(--bar-box-shadow-color);
+
+}
+
+/*
+  *
+  *	SPOILERS
+  *
+  */
+span.spoilerContent_a3d0f7.spoilerMarkdownContent_a3d0f7.hidden_a3d0f7 {
+    background-color: var(--sidebar-panel-color) !important;
+}
+
 /*
  *
- *	SPOILERS
+ *  SERVER FOLDERS
  *
  */
 
-.spoilerContent__37bfa {
-    background-color: var(--main-color) !important;
+.expandedFolderBackground_bc7085 {
+    border-radius: 25px;
 }
